--- a/nest-app-es/package.json
+++ b/nest-app-es/package.json
@@ -17,6 +17,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/platform-fastify": "^7.6.13",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4"
   },
