--- a/nest-app-es/package.json
+++ b/nest-app-es/package.json
@@ -30,9 +30,13 @@
     "@babel/register": "^7.6.2",
     "@babel/runtime": "^7.6.2",
     "@nestjs/testing": "^7.0.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "26.6.3",
     "nodemon": "^1.19.2",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "supertest": "^4.0.2"
   },
   "jest": {
