--- a/nest-app-es/jsconfig.json
+++ b/nest-app-es/jsconfig.json
@@ -1,10 +1,7 @@
 {
-  "compilerOptions": {
-      "target": "ES6",
-      "experimentalDecorators": true
-  },
-  "exclude": [
-      "node_modules",
-      "dist"
-  ]
+    "compilerOptions": {
+        "target": "ES6",
+        "experimentalDecorators": true
+    },
+    "exclude": ["node_modules", "dist"]
 }
