--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "lint": "npx eslint ./",
     "lint-fix": "npx eslint --fix ./",
-    "format": "npx prettier --write ./",
-    "pre-commit": "npm run format && npm run lint-fix"
+    "check-format": "npx prettier ./",
+    "format": "npx prettier --write ./"
   },
   "dependencies": {
     "next": "10.0.7",
