--- a/nest-app-es/package.json
+++ b/nest-app-es/package.json
@@ -21,8 +21,7 @@
         "@nestjs/core": "^7.0.0",
         "@nestjs/platform-express": "^7.0.0",
         "@nestjs/platform-fastify": "^7.6.13",
-        "reflect-metadata": "^0.1.13",
-        "rxjs": "^6.5.4"
+        "reflect-metadata": "^0.1.13"
     },
     "devDependencies": {
         "@babel/core": "^7.6.2",
