--- a/nest-app-es/package.json
+++ b/nest-app-es/package.json
@@ -1,10 +1,8 @@
 {
     "name": "nest-app-es",
     "version": "0.0.1",
-    "description": "",
-    "author": "",
     "private": true,
-    "license": "UNLICENSED",
+    "license": "MIT",
     "scripts": {
         "start": "babel-node index.js",
         "start:dev": "nodemon",
