--- a/back-ts/.prettierrc
+++ b/back-ts/.prettierrc
@@ -1,4 +1,11 @@
 {
+  "printWidth": 100,
+  "tabWidth": 4,
+  "semi": true,
+  "useTabs": false,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "es5",
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "endOfLine": "lf"
 }
