--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
-    "nest-lint": "cd nest-app-es && npm run lint",
+    "nest-lint": "cd back-ts && npm run lint",
     "front-lint": "cd front && npm run lint"
   },
   "repository": {
