--- a/back-ts/package.json
+++ b/back-ts/package.json
@@ -20,6 +20,7 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-fastify": "^7.6.15",
+    "dotenv": "^8.2.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2"
