--- a/front/package.json
+++ b/front/package.json
@@ -13,9 +13,11 @@
     "format": "npx prettier --write ./"
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "next": "10.0.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
