--- a/back-ts/package.json
+++ b/back-ts/package.json
@@ -18,12 +18,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-fastify": "^7.6.15",
+    "@nestjs/typeorm": "^7.1.5",
     "dotenv": "^8.2.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
