--- a/front/package.json
+++ b/front/package.json
@@ -13,11 +13,12 @@
     "format": "npx prettier --write ./"
   },
   "dependencies": {
-    "leaflet": "^1.7.1",
+    "mapbox-gl": "^2.2.0",
     "next": "10.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-leaflet": "^3.1.0"
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
