--- a/back-ts/package.json
+++ b/back-ts/package.json
@@ -20,9 +20,12 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-fastify": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
     "dotenv": "^8.2.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -35,6 +38,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.43",
+    "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.14.11",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
