--- a/back-ts/package.json
+++ b/back-ts/package.json
@@ -23,6 +23,7 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-fastify": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -35,6 +36,7 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.43",
