--- a/back-ts/package.json
+++ b/back-ts/package.json
@@ -25,6 +25,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
+    "fastify-secure-session": "^2.3.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
