--- a/back-ts/package.json
+++ b/back-ts/package.json
@@ -21,7 +21,7 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-fastify": "^7.6.15",
+    "@nestjs/platform-express": "^7.6.17",
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
