--- a/back-ts/package.json
+++ b/back-ts/package.json
@@ -25,6 +25,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
+    "express-session": "^1.17.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
@@ -38,6 +39,7 @@
     "@nestjs/testing": "^7.6.15",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.43",
     "@types/passport-local": "^1.0.33",
