--- a/back-ts/package.json
+++ b/back-ts/package.json
@@ -24,6 +24,7 @@
     "@nestjs/platform-express": "^7.6.17",
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.1",
+    "connect-typeorm": "^1.1.4",
     "dotenv": "^8.2.0",
     "express-session": "^1.17.2",
     "passport": "^0.4.1",
