--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "npx eslint ./",
@@ -13,6 +13,7 @@
     "format": "npx prettier --write ./"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "mapbox-gl": "^2.2.0",
     "next": "10.0.7",
     "react": "^17.0.1",
