skip error (browser true / node true)

--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -32,5 +32,9 @@
         "react": {
             "version": "detect"
         }
+    },
+    "env": {
+        "browser": true,
+        "node": true
     }
 }
