--- a/back-ts/package.json
+++ b/back-ts/package.json
@@ -14,7 +14,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint-fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\""
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "test": "jest",
+    "test:watch": "jest --watch"
+
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
