--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
     "nest-lint": "cd back-ts && npm run lint",
-    "front-lint": "cd front && npm run lint"
+    "front-lint": "cd front && npm run lint",
+    "start": "cd back-ts && npm start"
   },
   "repository": {
     "type": "git",
