--- a/.github/workflows/lint-format.yml
+++ b/.github/workflows/lint-format.yml
@@ -1,4 +1,4 @@
-name: test
+name: lint-format
 
 on:
   push:
@@ -24,5 +24,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
-    
+    - run: cd back-ts && npm ci && npm run lint && npm run check-format
+    - run: cd front && npm ci && npm run lint && npm run check-format
