--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: cd back-ts && npm ci && npm test && npm test:e2e
+    - run: cd back-ts && npm ci && npm test
     
